--- a/estilos.css
+++ b/estilos.css
@@ -6,7 +6,7 @@
 margin-bottom:0;
 	border-radius:0;	
 
-	background: #3A72A3;
+	background: #5E4485;
 	
 	color: #fff;
 	padding: 1% 0;
@@ -28,7 +28,7 @@ margin-bottom:0;
   .active a:hover{
 
   	color: #fff;
-  	background: #3A72A3;
+  	background: #5E4485;
   }
 
 /*MADE BY ME*/
@@ -40,3 +40,74 @@ margin-bottom:0;
   .navbar-inverse .navbar-nav li a{
   	color: #D5D5D5;
   }
+  .carousel-caption{
+
+    top: 50%;
+    transform: translateY(-50%);
+    text-transform: uppercase;
+  }
+  .btn{
+    font-size: 18px;
+    color: #fff;
+    padding: 12px 22px;
+    background: #5E4485;
+    border: 2px solid #fff;
+  }
+  .container{
+margin: 4% auto;
+
+  }
+
+
+  #icon{
+    max-width:200px;
+    margin: 1% auto;
+  }
+
+
+  footer{
+    width: 100%;
+    background: #5E4485;
+    padding: 5%;
+    color: #fff;
+  }
+
+@media (max-width: 600px ){
+.carousel-caption
+{
+  display:none;
+  
+}
+#icon{
+
+  max-width:150px;
+}
+h4{
+  font-size: .9em;
+}
+}
+
+/*=================================================================================================*/
+
+
+.fa{
+padding: 15px;
+font-size: 25px;
+color: #fff;
+}
+.fa:hover{
+  color:#D5D5D5;
+  text-decoration: none;
+}
+@media (max-width: 900px ){
+
+  .fa{
+    font-size: 20px;
+    padding: 10px;
+  }
+}
+
+
+/*COLOR PARA R&M CONTADORES*/
+/*background: #3A72A3;*/
+
